# ChatMind-AI

./: .gitignore  .replit  README.md  app.py  chatbot.py  console_chat.py  content_generator.py  gemini_helper.py  intents.json  label_encoder.pkl  local_agent.py  model.pkl  nlp_processor.py  pyproject.toml  replit.md  requirements.txt  train_model.py  vectorizer.pkl
agents/: cloud_agent.py  sports_agent.py
chatbot/: .gitignore  chatbot.py  label_encoder.pkl  nlp_processor.py  train_model.py
generators/: content_generator.py
static/css/: style.css
static/js/: chat.js
templates/: index.html
