[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.31.0",
    "gunicorn>=23.0.0",
    "joblib>=1.5.1",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.2.0",
    "reportlab>=4.4.3",
    "scikit-learn>=1.7.1",
    "sift-stack-py>=0.8.4",
]
